@@ -1,8 +1,10 @@
-2021-12-02
+2021-12-03
 
         * Version 2.0.0 released
         ========================
 
+        Remove GCOMSelection::zeta_min() and GCOMSelection::zeta_max()
+          methods
 	Add GCOMSelection::fpmtflag(), GCOMSelection::use_d1() and 
           GCOMSelection::use_d2() methods (#3917)
         Add GCOMModelDRBPhibarBins class (#3913)
